--- a/tsconfig.json
+++ b/tsconfig.json
@@ -109,5 +109,6 @@
   },
 
   "include": ["src/**/*", "src/db/seeds/seedify.ts"],
-  "exclude": ["node_modules", "__tests__"]
+  "exclude": ["node_modules", "__tests__"],
+  "files":["src/types.d.ts"]
 }
